--- a/assets/stylesheets/application.css
+++ b/assets/stylesheets/application.css
@@ -1,3 +1,96 @@
+.featured-index {
+  background-color: #1f2e6e;
+  color: #fff;
+  padding: 0 100px; }
+
+.index-image {
+  background: linear-gradient(rgba(31, 46, 110, 0.4), rgba(31, 46, 110, 0.4)), no-repeat url(../images/index-photo.jpg) 50%/100%; }
+  .index-image img {
+    opacity: 0;
+    vertical-align: top;
+    width: 100%; }
+
+.index-image-description {
+  bottom: 10px;
+  left: 25px;
+  max-width: 70%;
+  position: absolute;
+  right: 10px; }
+  .index-image-description h2 {
+    margin: 0; }
+
+.index-text {
+  margin-left: 50px; }
+
+.btn-join {
+  background-color: #efb61e; }
+
+.index-main {
+  background: linear-gradient(rgba(255, 255, 255, 0.4), rgba(255, 255, 255, 0.4)), url(../images/bg.png) 0 50%/cover no-repeat;
+  color: #1f2e6e;
+  padding: 50px 100px 200px; }
+  .index-main section {
+    background-color: #ebebeb;
+    border-right: 20px solid #9c9c9c;
+    padding: 15px 30px; }
+
+.index-article {
+  margin: 5px 0; }
+  .index-article img {
+    border: 5px solid #efb61e; }
+
+.index-aside {
+  text-align: right;
+  text-transform: uppercase; }
+
+.right-heading-border {
+  background-color: #ff3a3a;
+  height: 10px;
+  position: absolute;
+  right: 15px;
+  width: 50%; }
+
+.index-article {
+  margin-top: 20px; }
+  .index-article h2 {
+    margin: 0; }
+
+.btn-article-join {
+  background-color: #1f2e6e; }
+
+.index-text > h1 {
+  font-size: 55px; }
+
+.about-pinus-top {
+  background: linear-gradient(rgba(31, 46, 110, 0.7), rgba(31, 46, 110, 0.7)), no-repeat url(../images/index-photo.jpg) 50%/100%;
+  color: white;
+  padding: 10px 20%;
+  text-align: center; }
+
+.about-pinus-text {
+  margin-bottom: 30px;
+  text-align: center; }
+  .about-pinus-text h1 {
+    display: inline-block;
+    letter-spacing: 0.2em;
+    padding: 10px; }
+    .about-pinus-text h1:first-child {
+      background-color: #1f2e6e; }
+    .about-pinus-text h1:last-child {
+      background-color: #efb61e; }
+
+.about-main {
+  background-color: #fff;
+  color: #1f2e6e;
+  margin: 0 auto;
+  width: 60%; }
+
+.heading-border {
+  background-color: #ff3a3a;
+  height: 8px;
+  margin-bottom: 20px;
+  width: 50px; }
+
 html,
 body {
   font-family: 'Hind', 'Montserrat', sans-serif; }
@@ -18,9 +111,6 @@ body {
 .navbar-brand {
   height: 40px;
   padding: 5px 15px; }
-
-h1 {
-  font-size: 55px; }
 
 h1,
 h2,
