--- a/assets/stylesheets/application.scss
+++ b/assets/stylesheets/application.scss
@@ -1,4 +1,6 @@
 @import 'colors';
+@import 'index';
+@import 'about';
 
 html,
 body {
@@ -27,10 +29,6 @@ body {
 .navbar-brand {
   height: 40px;
   padding: 5px 15px;
-}
-
-h1 {
-  font-size: 55px;
 }
 
 h1,
