--- a/assets/stylesheets/index.scss
+++ b/assets/stylesheets/index.scss
@@ -1,5 +1,3 @@
-@import 'colors';
-
 $image-overlay: fade-out($purple, 0.6);
 $bg-overlay: rgba(255, 255, 255, 0.4);
 
@@ -64,7 +62,7 @@ $bg-overlay: rgba(255, 255, 255, 0.4);
   text-transform: uppercase;
 }
 
-.heading-border {
+.right-heading-border {
   background-color: $red;
   height: 10px;
   position: absolute;
@@ -82,4 +80,8 @@ $bg-overlay: rgba(255, 255, 255, 0.4);
 
 .btn-article-join {
   background-color: $purple;
+}
+
+.index-text > h1 {
+  font-size: 55px;
 }
