--- a/assets/stylesheets/about.scss
+++ b/assets/stylesheets/about.scss
@@ -33,7 +33,7 @@ $about-overlay: fade-out($purple, 0.3);
   width: 60%;
 }
 
-.heading-border {
+.right-heading-border {
   background-color: $red;
   height: 8px;
   margin-bottom: 20px;
