--- a/assets/stylesheets/application.scss
+++ b/assets/stylesheets/application.scss
@@ -2,6 +2,7 @@
 @import 'index';
 @import 'about';
 @import 'shop';
+@import 'library';
 
 html,
 body {
@@ -94,5 +95,42 @@ body > footer {
 
   h1 {
     letter-spacing: 0.2em;
+  }
+}
+
+.btn-market {
+  background-color: $yellow;
+  border-radius: 0;
+  color: $purple !important;
+  margin: 5px 30px 0;
+  letter-spacing: 0.2em;
+}
+
+.market-item {
+  background-color: $gray;
+  padding: 20px;
+  margin: 0 auto 50px;
+  width: 60%;
+
+  > * {
+    display: block;
+    margin: 0 auto;
+    text-align: center;
+  }
+
+  img {
+    max-height: 200px;
+  }
+
+  &.active {
+    background-color: $light-yellow;
+  }
+
+  &.borrowed {
+    background-color: $light-yellow;
+
+    > .library-item-availability {
+      color: $gray;
+    }
   }
 }
